feat: implement channel grouping